# test-mint-scripts

./: LICENSE  test-mint-scripts.cabal
app/: Main.hs
scripts/: hash-policies.sh
scripts/mainnet/: test-policy-1.addr  test-policy-2.addr  test-policy-3.addr
scripts/minting/: test-mint-tx.sh
scripts/testnet/: test-policy-2.addr  test-policy-3.addr
src/Canonical/: TestMinting.hs
