cabal-version: 2.4

name:                   test-mint-scripts
version:                1.0.0
description:            Simple mint scripts for testing.
author:                 Jonathan Fischoff
maintainer:             jonathan@canonicalllc.com
license:                NONE
build-type:             Simple
extra-source-files:     README.md
Tested-With: GHC ==8.10.4

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DataKinds
                        DeriveAnyClass
                        DeriveGeneric
                        FlexibleInstances
                        FlexibleContexts
                        MultiParamTypeClasses
                        NamedFieldPuns
                        ScopedTypeVariables
                        TemplateHaskell
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        RecordWildCards
                        NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               base, project-config

  hs-source-dirs:       src

  exposed-modules: Canonical.TestMinting

  build-depends:
                  bytestring
                , cardano-api
                , plutus-core
                , plutus-ledger
                , plutus-ledger-api
                , plutus-tx
                , plutus-tx-plugin
                , serialise

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -Wall -Wno-unused-packages -Werror

executable create-smart-contract
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:

                         cardano-api
                      , test-mint-scripts
